--- a/轉到臺灣言語資料庫/requirements.txt
+++ b/轉到臺灣言語資料庫/requirements.txt
@@ -1,1 +1,5 @@
+tai5-uan5-gian5-gi2-kang1-ku7==0.5.5
+tai5-uan5_gian5-gi2_tsu1-liau7-khoo3==3.1.2
 -e git+https://github.com/conrado/libavwrapper@master#egg=libavwrapper
+beautifulsoup4==4.3.2
+lxml==3.4.4
